--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   firebase_core: ^4.1.0
+  web: ^1.1.1  # Adicione esta linha
   cloud_firestore: ^6.0.1
   firebase_auth: ^6.0.2
   rxdart: ^0.28.0
@@ -47,6 +48,7 @@ dependencies:
   flutter_localizations: 
     sdk: flutter
   localization: ^2.1.0
+  file_saver: ^0.3.1
 
 dev_dependencies:
   flutter_test:
